OLC2_Proyecto 1_201503958/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RNULO

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> imprimir_ins finins
Rule 6     instruccion -> declaracion finins
Rule 7     instruccion -> if_instr finins
Rule 8     instruccion -> while_instr finins
Rule 9     instruccion -> for_instr finins
Rule 10    instruccion -> break_instr finins
Rule 11    instruccion -> continue_instr finins
Rule 12    instruccion -> funcion_instr finins
Rule 13    instruccion -> return_instr finins
Rule 14    instruccion -> llamada_instr finins
Rule 15    finins -> PUNTOCOMA
Rule 16    instruccion -> error PUNTOCOMA
Rule 17    imprimir_instr -> RPRINTLN PARA contenidos_print PARC
Rule 18    imprimir_ins -> RPRINT PARA contenidos_print PARC
Rule 19    contenidos_print -> contenidos_print COMA valores_print
Rule 20    contenidos_print -> valores_print
Rule 21    valores_print -> expresion
Rule 22    declaracion -> declaracion_instr_completa
Rule 23    declaracion -> declaracion_instr_simple
Rule 24    declaracion_instr_simple -> ID IGUAL expresion
Rule 25    declaracion_instr_completa -> ID IGUAL expresion DOBLEDPUNTOS tipo
Rule 26    if_instr -> RIF expresion instrucciones REND
Rule 27    if_instr -> RIF expresion instrucciones RELSE instrucciones REND
Rule 28    if_instr -> RIF expresion instrucciones elseif_instr RELSE instrucciones REND
Rule 29    elseif_instr -> elseif_instr elseif_instruction
Rule 30    elseif_instr -> elseif_instruction
Rule 31    elseif_instruction -> RELSEIF expresion instrucciones
Rule 32    while_instr -> RWHILE expresion instrucciones REND
Rule 33    for_instr -> RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
Rule 34    for_instr -> RFOR ID RIN expresion instrucciones REND
Rule 35    break_instr -> RBREAK
Rule 36    continue_instr -> RCONTINUE
Rule 37    funcion_instr -> RFUNCTION ID PARA parametros PARC instrucciones REND
Rule 38    funcion_instr -> RFUNCTION ID PARA PARC instrucciones REND
Rule 39    parametros -> parametros COMA parametro
Rule 40    parametros -> parametro
Rule 41    parametro -> ID DOBLEDPUNTOS tipo
Rule 42    return_instr -> RRETURN expresion
Rule 43    llamada_instr -> ID PARA PARC
Rule 44    llamada_instr -> ID PARA parametros_llamada PARC
Rule 45    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 46    parametros_llamada -> parametro_llamada
Rule 47    parametro_llamada -> expresion
Rule 48    tipo -> RINT
Rule 49    tipo -> RDOUBLE
Rule 50    tipo -> RCHAR
Rule 51    tipo -> RSTRING
Rule 52    tipo -> RBOOLEAN
Rule 53    expresion -> expresion MAS expresion
Rule 54    expresion -> expresion MENOS expresion
Rule 55    expresion -> expresion POR expresion
Rule 56    expresion -> expresion DIV expresion
Rule 57    expresion -> expresion POT expresion
Rule 58    expresion -> expresion MOD expresion
Rule 59    expresion -> expresion MENORQUE expresion
Rule 60    expresion -> expresion MAYORQUE expresion
Rule 61    expresion -> expresion MENORIGUAL expresion
Rule 62    expresion -> expresion MAYORIGUAL expresion
Rule 63    expresion -> expresion IGUALIGUAL expresion
Rule 64    expresion -> expresion DIFERENTE expresion
Rule 65    expresion -> expresion OR expresion
Rule 66    expresion -> expresion AND expresion
Rule 67    expresion -> MENOS expresion
Rule 68    expresion -> NOT expresion
Rule 69    expresion -> PARA expresion PARC
Rule 70    expresion -> llamada_instr
Rule 71    expresion -> ID
Rule 72    expresion -> ENTERO
Rule 73    expresion -> DECIMAL
Rule 74    expresion -> CADENA
Rule 75    expresion -> CARACTER
Rule 76    expresion -> RTRUE
Rule 77    expresion -> RFALSE
Rule 78    expresion -> RPARSE PARA tipo COMA expresion PARC
Rule 79    expresion -> RTRUNCATE PARA RINT COMA expresion PARC
Rule 80    expresion -> RLOG PARA expresion COMA expresion PARC

Terminals, with rules where they appear

AND                  : 66
CADENA               : 74
CARACTER             : 75
COMA                 : 19 39 45 78 79 80
DECIMAL              : 73
DIFERENTE            : 64
DIV                  : 56
DOBLEDPUNTOS         : 25 41
DOSPUNTOS            : 33
ENTERO               : 72
ID                   : 24 25 33 34 37 38 41 43 44 71
IGUAL                : 24 25
IGUALIGUAL           : 63
MAS                  : 53
MAYORIGUAL           : 62
MAYORQUE             : 60
MENORIGUAL           : 61
MENORQUE             : 59
MENOS                : 54 67
MOD                  : 58
NOT                  : 68
OR                   : 65
PARA                 : 17 18 37 38 43 44 69 78 79 80
PARC                 : 17 18 37 38 43 44 69 78 79 80
POR                  : 55
POT                  : 57
PUNTOCOMA            : 15 16
RBOOLEAN             : 52
RBREAK               : 35
RCHAR                : 50
RCONTINUE            : 36
RDOUBLE              : 49
RELSE                : 27 28
RELSEIF              : 31
REND                 : 26 27 28 32 33 34 37 38
RFALSE               : 77
RFOR                 : 33 34
RFUNCTION            : 37 38
RIF                  : 26 27 28
RIN                  : 33 34
RINT                 : 48 79
RLOG                 : 80
RNULO                : 
RPARSE               : 78
RPRINT               : 18
RPRINTLN             : 17
RRETURN              : 42
RSTRING              : 51
RTRUE                : 76
RTRUNCATE            : 79
RWHILE               : 32
error                : 16

Nonterminals, with rules where they appear

break_instr          : 10
contenidos_print     : 17 18 19
continue_instr       : 11
declaracion          : 6
declaracion_instr_completa : 22
declaracion_instr_simple : 23
elseif_instr         : 28 29
elseif_instruction   : 29 30
expresion            : 21 24 25 26 27 28 31 32 33 33 34 42 47 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 68 69 78 79 80 80
finins               : 4 5 6 7 8 9 10 11 12 13 14
for_instr            : 9
funcion_instr        : 12
if_instr             : 7
imprimir_ins         : 5
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 26 27 27 28 28 31 32 33 34 37 38
llamada_instr        : 14 70
parametro            : 39 40
parametro_llamada    : 45 46
parametros           : 37 39
parametros_llamada   : 44 45
return_instr         : 13
tipo                 : 25 41 78
valores_print        : 19 20
while_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . imprimir_ins finins
    (6) instruccion -> . declaracion finins
    (7) instruccion -> . if_instr finins
    (8) instruccion -> . while_instr finins
    (9) instruccion -> . for_instr finins
    (10) instruccion -> . break_instr finins
    (11) instruccion -> . continue_instr finins
    (12) instruccion -> . funcion_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . llamada_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINTLN PARA contenidos_print PARC
    (18) imprimir_ins -> . RPRINT PARA contenidos_print PARC
    (22) declaracion -> . declaracion_instr_completa
    (23) declaracion -> . declaracion_instr_simple
    (26) if_instr -> . RIF expresion instrucciones REND
    (27) if_instr -> . RIF expresion instrucciones RELSE instrucciones REND
    (28) if_instr -> . RIF expresion instrucciones elseif_instr RELSE instrucciones REND
    (32) while_instr -> . RWHILE expresion instrucciones REND
    (33) for_instr -> . RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (34) for_instr -> . RFOR ID RIN expresion instrucciones REND
    (35) break_instr -> . RBREAK
    (36) continue_instr -> . RCONTINUE
    (37) funcion_instr -> . RFUNCTION ID PARA parametros PARC instrucciones REND
    (38) funcion_instr -> . RFUNCTION ID PARA PARC instrucciones REND
    (42) return_instr -> . RRETURN expresion
    (43) llamada_instr -> . ID PARA PARC
    (44) llamada_instr -> . ID PARA parametros_llamada PARC
    (25) declaracion_instr_completa -> . ID IGUAL expresion DOBLEDPUNTOS tipo
    (24) declaracion_instr_simple -> . ID IGUAL expresion

    error           shift and go to state 15
    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    RIF             shift and go to state 20
    RWHILE          shift and go to state 21
    RFOR            shift and go to state 22
    RBREAK          shift and go to state 24
    RCONTINUE       shift and go to state 25
    RFUNCTION       shift and go to state 26
    RRETURN         shift and go to state 27
    ID              shift and go to state 23

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    imprimir_ins                   shift and go to state 5
    declaracion                    shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    funcion_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    llamada_instr                  shift and go to state 14
    declaracion_instr_completa     shift and go to state 18
    declaracion_instr_simple       shift and go to state 19

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . imprimir_ins finins
    (6) instruccion -> . declaracion finins
    (7) instruccion -> . if_instr finins
    (8) instruccion -> . while_instr finins
    (9) instruccion -> . for_instr finins
    (10) instruccion -> . break_instr finins
    (11) instruccion -> . continue_instr finins
    (12) instruccion -> . funcion_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . llamada_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINTLN PARA contenidos_print PARC
    (18) imprimir_ins -> . RPRINT PARA contenidos_print PARC
    (22) declaracion -> . declaracion_instr_completa
    (23) declaracion -> . declaracion_instr_simple
    (26) if_instr -> . RIF expresion instrucciones REND
    (27) if_instr -> . RIF expresion instrucciones RELSE instrucciones REND
    (28) if_instr -> . RIF expresion instrucciones elseif_instr RELSE instrucciones REND
    (32) while_instr -> . RWHILE expresion instrucciones REND
    (33) for_instr -> . RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (34) for_instr -> . RFOR ID RIN expresion instrucciones REND
    (35) break_instr -> . RBREAK
    (36) continue_instr -> . RCONTINUE
    (37) funcion_instr -> . RFUNCTION ID PARA parametros PARC instrucciones REND
    (38) funcion_instr -> . RFUNCTION ID PARA PARC instrucciones REND
    (42) return_instr -> . RRETURN expresion
    (43) llamada_instr -> . ID PARA PARC
    (44) llamada_instr -> . ID PARA parametros_llamada PARC
    (25) declaracion_instr_completa -> . ID IGUAL expresion DOBLEDPUNTOS tipo
    (24) declaracion_instr_simple -> . ID IGUAL expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 15
    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    RIF             shift and go to state 20
    RWHILE          shift and go to state 21
    RFOR            shift and go to state 22
    RBREAK          shift and go to state 24
    RCONTINUE       shift and go to state 25
    RFUNCTION       shift and go to state 26
    RRETURN         shift and go to state 27
    ID              shift and go to state 23

    instruccion                    shift and go to state 28
    imprimir_instr                 shift and go to state 4
    imprimir_ins                   shift and go to state 5
    declaracion                    shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    funcion_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    llamada_instr                  shift and go to state 14
    declaracion_instr_completa     shift and go to state 18
    declaracion_instr_simple       shift and go to state 19

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINTLN        reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 29

state 5

    (5) instruccion -> imprimir_ins . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 31

state 6

    (6) instruccion -> declaracion . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 32

state 7

    (7) instruccion -> if_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 33

state 8

    (8) instruccion -> while_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 34

state 9

    (9) instruccion -> for_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 35

state 10

    (10) instruccion -> break_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 36

state 11

    (11) instruccion -> continue_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 37

state 12

    (12) instruccion -> funcion_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 38

state 13

    (13) instruccion -> return_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 39

state 14

    (14) instruccion -> llamada_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30

    finins                         shift and go to state 40

state 15

    (16) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41


state 16

    (17) imprimir_instr -> RPRINTLN . PARA contenidos_print PARC

    PARA            shift and go to state 42


state 17

    (18) imprimir_ins -> RPRINT . PARA contenidos_print PARC

    PARA            shift and go to state 43


state 18

    (22) declaracion -> declaracion_instr_completa .

    PUNTOCOMA       reduce using rule 22 (declaracion -> declaracion_instr_completa .)


state 19

    (23) declaracion -> declaracion_instr_simple .

    PUNTOCOMA       reduce using rule 23 (declaracion -> declaracion_instr_simple .)


state 20

    (26) if_instr -> RIF . expresion instrucciones REND
    (27) if_instr -> RIF . expresion instrucciones RELSE instrucciones REND
    (28) if_instr -> RIF . expresion instrucciones elseif_instr RELSE instrucciones REND
    (53) expresion -> . expresion MAS expresion
    (54) expresion -> . expresion MENOS expresion
    (55) expresion -> . expresion POR expresion
    (56) expresion -> . expresion DIV expresion
    (57) expresion -> . expresion POT expresion
    (58) expresion -> . expresion MOD expresion
    (59) expresion -> . expresion MENORQUE expresion
    (60) expresion -> . expresion MAYORQUE expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYORIGUAL expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion OR expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . MENOS expresion
    (68) expresion -> . NOT expresion
    (69) expresion -> . PARA expresion PARC
    (70) expresion -> . llamada_instr
    (71) expresion -> . ID
    (72) expresion -> . ENTERO
    (73) expresion -> . DECIMAL
    (74) expresion -> . CADENA
    (75) expresion -> . CARACTER
    (76) expresion -> . RTRUE
    (77) expresion -> . RFALSE
    (78) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (79) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (80) expresion -> . RLOG PARA expresion COMA expresion PARC
    (43) llamada_instr -> . ID PARA PARC
    (44) llamada_instr -> . ID PARA parametros_llamada PARC

    MENOS           shift and go to state 45
    NOT             shift and go to state 46
    PARA            shift and go to state 47
    ID              shift and go to state 49
    ENTERO          shift and go to state 50
    DECIMAL         shift and go to state 51
    CADENA          shift and go to state 52
    CARACTER        shift and go to state 53
    RTRUE           shift and go to state 54
    RFALSE          shift and go to state 55
    RPARSE          shift and go to state 56
    RTRUNCATE       shift and go to state 57
    RLOG            shift and go to state 58

    expresion                      shift and go to state 44
    llamada_instr                  shift and go to state 48

state 21

    (32) while_instr -> RWHILE . expresion instrucciones REND
    (53) expresion -> . expresion MAS expresion
    (54) expresion -> . expresion MENOS expresion
    (55) expresion -> . expresion POR expresion
    (56) expresion -> . expresion DIV expresion
    (57) expresion -> . expresion POT expresion
    (58) expresion -> . expresion MOD expresion
    (59) expresion -> . expresion MENORQUE expresion
    (60) expresion -> . expresion MAYORQUE expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYORIGUAL expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion OR expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . MENOS expresion
    (68) expresion -> . NOT expresion
    (69) expresion -> . PARA expresion PARC
    (70) expresion -> . llamada_instr
    (71) expresion -> . ID
    (72) expresion -> . ENTERO
    (73) expresion -> . DECIMAL
    (74) expresion -> . CADENA
    (75) expresion -> . CARACTER
    (76) expresion -> . RTRUE
    (77) expresion -> . RFALSE
    (78) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (79) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (80) expresion -> . RLOG PARA expresion COMA expresion PARC
    (43) llamada_instr -> . ID PARA PARC
    (44) llamada_instr -> . ID PARA parametros_llamada PARC

    MENOS           shift and go to state 45
    NOT             shift and go to state 46
    PARA            shift and go to state 47
    ID              shift and go to state 49
    ENTERO          shift and go to state 50
    DECIMAL         shift and go to state 51
    CADENA          shift and go to state 52
    CARACTER        shift and go to state 53
    RTRUE           shift and go to state 54
    RFALSE          shift and go to state 55
    RPARSE          shift and go to state 56
    RTRUNCATE       shift and go to state 57
    RLOG            shift and go to state 58

    expresion                      shift and go to state 59
    llamada_instr                  shift and go to state 48

state 22

    (33) for_instr -> RFOR . ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (34) for_instr -> RFOR . ID RIN expresion instrucciones REND

    ID              shift and go to state 60


state 23

    (43) llamada_instr -> ID . PARA PARC
    (44) llamada_instr -> ID . PARA parametros_llamada PARC
    (25) declaracion_instr_completa -> ID . IGUAL expresion DOBLEDPUNTOS tipo
    (24) declaracion_instr_simple -> ID . IGUAL expresion

    PARA            shift and go to state 61
    IGUAL           shift and go to state 62


state 24

    (35) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 35 (break_instr -> RBREAK .)


state 25

    (36) continue_instr -> RCONTINUE .

    PUNTOCOMA       reduce using rule 36 (continue_instr -> RCONTINUE .)


state 26

    (37) funcion_instr -> RFUNCTION . ID PARA parametros PARC instrucciones REND
    (38) funcion_instr -> RFUNCTION . ID PARA PARC instrucciones REND

    ID              shift and go to state 63


state 27

    (42) return_instr -> RRETURN . expresion
    (53) expresion -> . expresion MAS expresion
    (54) expresion -> . expresion MENOS expresion
    (55) expresion -> . expresion POR expresion
    (56) expresion -> . expresion DIV expresion
    (57) expresion -> . expresion POT expresion
    (58) expresion -> . expresion MOD expresion
    (59) expresion -> . expresion MENORQUE expresion
    (60) expresion -> . expresion MAYORQUE expresion
    (61) expresion -> . expresion MENORIGUAL expresion
    (62) expresion -> . expresion MAYORIGUAL expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion OR expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . MENOS expresion
    (68) expresion -> . NOT expresion
    (69) expresion -> . PARA expresion PARC
    (70) expresion -> . llamada_instr
    (71) expresion -> . ID
    (72) expresion -> . ENTERO
    (73) expresion -> . DECIMAL
    (74) expresion -> . CADENA
    (75) expresion -> . CARACTER
    (76) expresion -> . RTRUE
    (77) expresion -> . RFALSE
    (78) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (79) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (80) expresion -> . RLOG PARA expresion COMA expresion PARC
    (43) llamada_instr -> . ID PARA PARC
    (44) llamada_instr -> . ID PARA parametros_llamada PARC

    MENOS           shift and go to state 45
    NOT             shift and go to state 46
    PARA            shift and go to state 47
    ID              shift and go to state 49
    ENTERO          shift and go to state 50
    DECIMAL         shift and go to state 51
    CADENA          shift and go to state 52
    CARACTER        shift and go to state 53
    RTRUE           shift and go to state 54
    RFALSE          shift and go to state 55
    RPARSE          shift and go to state 56
    RTRUNCATE       shift and go to state 57
    RLOG            shift and go to state 58

    expresion                      shift and go to state 64
    llamada_instr                  shift and go to state 48

state 28

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINTLN        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCONTINUE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNCTION       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    REND            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSEIF         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 29

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINTLN        reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RIF             reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RWHILE          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFOR            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RCONTINUE       reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFUNCTION       reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    REND            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RELSE           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RELSEIF         reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 30

    (15) finins -> PUNTOCOMA .

    error           reduce using rule 15 (finins -> PUNTOCOMA .)
    RPRINTLN        reduce using rule 15 (finins -> PUNTOCOMA .)
    RPRINT          reduce using rule 15 (finins -> PUNTOCOMA .)
    RIF             reduce using rule 15 (finins -> PUNTOCOMA .)
    RWHILE          reduce using rule 15 (finins -> PUNTOCOMA .)
    RFOR            reduce using rule 15 (finins -> PUNTOCOMA .)
    RBREAK          reduce using rule 15 (finins -> PUNTOCOMA .)
    RCONTINUE       reduce using rule 15 (finins -> PUNTOCOMA .)
    RFUNCTION       reduce using rule 15 (finins -> PUNTOCOMA .)
    RRETURN         reduce using rule 15 (finins -> PUNTOCOMA .)
    ID              reduce using rule 15 (finins -> PUNTOCOMA .)
    $end            reduce using rule 15 (finins -> PUNTOCOMA .)
    REND            reduce using rule 15 (finins -> PUNTOCOMA .)
    RELSE           reduce using rule 15 (finins -> PUNTOCOMA .)
    RELSEIF         reduce using rule 15 (finins -> PUNTOCOMA .)


state 31

    (5) instruccion -> imprimir_ins finins .

    error           reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RPRINTLN        reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RPRINT          reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RIF             reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RWHILE          reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RFOR            reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RBREAK          reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RCONTINUE       reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RFUNCTION       reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RRETURN         reduce using rule 5 (instruccion -> imprimir_ins finins .)
    ID              reduce using rule 5 (instruccion -> imprimir_ins finins .)
    $end            reduce using rule 5 (instruccion -> imprimir_ins finins .)
    REND            reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RELSE           reduce using rule 5 (instruccion -> imprimir_ins finins .)
    RELSEIF         reduce using rule 5 (instruccion -> imprimir_ins finins .)


state 32

    (6) instruccion -> declaracion finins .

    error           reduce using rule 6 (instruccion -> declaracion finins .)
    RPRINTLN        reduce using rule 6 (instruccion -> declaracion finins .)
    RPRINT          reduce using rule 6 (instruccion -> declaracion finins .)
    RIF             reduce using rule 6 (instruccion -> declaracion finins .)
    RWHILE          reduce using rule 6 (instruccion -> declaracion finins .)
    RFOR            reduce using rule 6 (instruccion -> declaracion finins .)
    RBREAK          reduce using rule 6 (instruccion -> declaracion finins .)
    RCONTINUE       reduce using rule 6 (instruccion -> declaracion finins .)
    RFUNCTION       reduce using rule 6 (instruccion -> declaracion finins .)
    RRETURN         reduce using rule 6 (instruccion -> declaracion finins .)
    ID              reduce using rule 6 (instruccion -> declaracion finins .)
    $end            reduce using rule 6 (instruccion -> declaracion finins .)
    REND            reduce using rule 6 (instruccion -> declaracion finins .)
    RELSE           reduce using rule 6 (instruccion -> declaracion finins .)
    RELSEIF         reduce using rule 6 (instruccion -> declaracion finins .)


state 33

    (7) instruccion -> if_instr finins .

    error           reduce using rule 7 (instruccion -> if_instr finins .)
    RPRINTLN        reduce using rule 7 (instruccion -> if_instr finins .)
    RPRINT          reduce using rule 7 (instruccion -> if_instr finins .)
    RIF             reduce using rule 7 (instruccion -> if_instr finins .)
    RWHILE          reduce using rule 7 (instruccion -> if_instr finins .)
    RFOR            reduce using rule 7 (instruccion -> if_instr finins .)
    RBREAK          reduce using rule 7 (instruccion -> if_instr finins .)
    RCONTINUE       reduce using rule 7 (instruccion -> if_instr finins .)
    RFUNCTION       reduce using rule 7 (instruccion -> if_instr finins .)
    RRETURN         reduce using rule 7 (instruccion -> if_instr finins .)
    ID              reduce using rule 7 (instruccion -> if_instr finins .)
    $end            reduce using rule 7 (instruccion -> if_instr finins .)
    REND            reduce using rule 7 (instruccion -> if_instr finins .)
    RELSE           reduce using rule 7 (instruccion -> if_instr finins .)
    RELSEIF         reduce using rule 7 (instruccion -> if_instr finins .)


state 34

    (8) instruccion -> while_instr finins .

    error           reduce using rule 8 (instruccion -> while_instr finins .)
    RPRINTLN        reduce using rule 8 (instruccion -> while_instr finins .)
    RPRINT          reduce using rule 8 (instruccion -> while_instr finins .)
    RIF             reduce using rule 8 (instruccion -> while_instr finins .)
    RWHILE          reduce using rule 8 (instruccion -> while_instr finins .)
    RFOR            reduce using rule 8 (instruccion -> while_instr finins .)
    RBREAK          reduce using rule 8 (instruccion -> while_instr finins .)
    RCONTINUE       reduce using rule 8 (instruccion -> while_instr finins .)
    RFUNCTION       reduce using rule 8 (instruccion -> while_instr finins .)
    RRETURN         reduce using rule 8 (instruccion -> while_instr finins .)
    ID              reduce using rule 8 (instruccion -> while_instr finins .)
    $end            reduce using rule 8 (instruccion -> while_instr finins .)
    REND            reduce using rule 8 (instruccion -> while_instr finins .)
    RELSE           reduce using rule 8 (instruccion -> while_instr finins .)
    RELSEIF         reduce using rule 8 (instruccion -> while_instr finins .)


state 35

    (9) instruccion -> for_instr finins .

    error           reduce using rule 9 (instruccion -> for_instr finins .)
    RPRINTLN        reduce using rule 9 (instruccion -> for_instr finins .)
    RPRINT          reduce using rule 9 (instruccion -> for_instr finins .)
    RIF             reduce using rule 9 (instruccion -> for_instr finins .)
    RWHILE          reduce using rule 9 (instruccion -> for_instr finins .)
    RFOR            reduce using rule 9 (instruccion -> for_instr finins .)
    RBREAK          reduce using rule 9 (instruccion -> for_instr finins .)
    RCONTINUE       reduce using rule 9 (instruccion -> for_instr finins .)
    RFUNCTION       reduce using rule 9 (instruccion -> for_instr finins .)
    RRETURN         reduce using rule 9 (instruccion -> for_instr finins .)
    ID              reduce using rule 9 (instruccion -> for_instr finins .)
    $end            reduce using rule 9 (instruccion -> for_instr finins .)
    REND            reduce using rule 9 (instruccion -> for_instr finins .)
    RELSE           reduce using rule 9 (instruccion -> for_instr finins .)
    RELSEIF         reduce using rule 9 (instruccion -> for_instr finins .)


state 36

    (10) instruccion -> break_instr finins .
